--- a/uppy-file-upload/package.json
+++ b/uppy-file-upload/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fe",
+  "name": "uppy-spring-file-upload",
   "version": "0.0.1-SNAPSHOT",
   "description": "",
   "main": "./app",
@@ -13,6 +13,8 @@
   },
   "devDependencies": {
     "webpack": "3.10.0",
-    "webpack-dev-server": "2.9.6"
+    "extract-text-webpack-plugin": "3.0.2",
+    "css-loader": "0.28.8",
+    "style-loader": "0.19.1"
   }
 }
