--- a/uppy-file-upload/pom.xml
+++ b/uppy-file-upload/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.tmp</groupId>
-  <artifactId>fe</artifactId>
+  <groupId>me.desair.spring</groupId>
+  <artifactId>uppy-file-upload</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
