--- a/spring-boot-rest/pom.xml
+++ b/spring-boot-rest/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>me.desair.tus</groupId>
       <artifactId>tus-java-server</artifactId>
-      <version>1.0.0-0.1-SNAPSHOT</version>
+      <version>1.0.0-1.0</version>
     </dependency>
   </dependencies>
 
@@ -47,4 +47,5 @@
       </plugin>
     </plugins>
   </build>
+
 </project>
