--- a/spring-boot-rest/pom.xml
+++ b/spring-boot-rest/pom.xml
@@ -35,7 +35,7 @@
     <dependency>
       <groupId>me.desair.tus</groupId>
       <artifactId>tus-java-server</artifactId>
-      <version>1.0.0-1.1-SNAPSHOT</version>
+      <version>1.0.0-1.1</version>
     </dependency>
     <dependency>
       <groupId>io.tus.java.client</groupId>
